# winference

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: conf.py  index.rst
docs/api/: bradley_terry.rst  calibration.rst  groups.rst  hodge.rst  simulate.rst  tournament.rst
examples/: hodge_vs_groups.py  quickstart.py
tests/: conftest.py  test_bradley_terry.py  test_calibration.py  test_groups.py  test_hodge.py  test_simulate.py  test_tournament.py
winference/: __init__.py  bradley_terry.py  calibration.py  groups.py  hodge.py  simulate.py  tournament.py
